<resources>
    <string name="app_name">Guesture</string>
    <string name="network_filed_message">Error communicating to server, Please check your internet connectivity</string>
    <string name="guesture_description">Experience like-minded co-living while you also perceive your passion and interests.</string>
    <string name="page_title">Login</string>
    <string name="email_or_mobilenumber">Email or Mobile Number</string>
    <string name="error_field">This field is required</string>
    <string name="password">Password</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="dont_have_text">Don’t have an account yet?</string>
    <string name="get_one_now">Get one now.</string>
    <string name="loginCredential">Invalid login credentials</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="forgot_password_description">The link to reset your password will be sent to your registered email address and mobile number.</string>
    <string name="email_error_message">This email is not registered with GuestJini.</string>
    <string name="forgot_password_dialog_description">A link has been sent to your email account to reset your password.</string>
    <string name="otpErrorMessage">You have entered wrong OTP.</string>
    <string name="otp_success_description">New password has been sent to your registered mobile number.</string>
    <string name="success">SUCCESS</string>
    <string name="failed">FAILED</string>
    <string name="otp_success_title">FORGOT PASSWORD</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="submit">SUBMIT</string>
    <string name="verification_code_description">Please type the verification code sent to your mobile number.</string>
    <string name="customer_care">CUSTOMER CARE</string>
    <string name="app_access_request">APP ACCESS REQUEST</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="registered_email">REGISTERED EMAIL</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="app_access_request_dialog_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim felis et magna mattis finibus.</string>
    <string name="app_access_request_description">Experience like-minded co-living while you also perceive your passion and interests.</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_conditions">Term &amp; Conditions</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="change_password_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam erat sapien, ultricies quis.</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_error_field">This field is required or Wrong Password.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_error_field">This field is required or Passwords not matching.</string>
    <string name="name">NAME</string>
    <string name="john">John Doe</string>
    <string name="gender">GENDER</string>
    <string name="male_or_female">Male</string>
    <string name="age">AGE</string>
    <string name="age_value">33 years</string>
    <string name="mobile">9090909090</string>
    <string name="email_value">johndoe@gmail.com</string>
    <string name="place_of_origin">YOUR PLACE OF ORIGIN</string>
    <string name="my_interests">MY INTERESTS</string>
    <string name="setup">SETUP</string>
    <string name="edit_icon">edit icon</string>
    <string name="menu_camera">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit. .</string>
    <string name="menu_gallery">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit. .</string>
    <string name="ic_btn_back_arrow_circle_bg_white">Back Arrow Icon</string>
    <string name="red_star">*</string>
    <string name="alert_message">Alert Dailog Message</string>
    <string name="alert_title">Alert Dailog Title</string>
    <string name="help_title">Help &amp; Support</string>
    <string name="find_help">FIND HELP</string>
    <string name="search">Search..</string>
    <string name="Popular_Searches">Popular Searches</string>
    <string name="resultFound">03 Results found.</string>
    <string name="Explore">Explore</string>
    <string name="explore_description">Experience like-minded co-living while you also perceive your passion and interests.</string>
    <string name="tickets">TICKETS</string>
    <string name="tickets_description">You can submit your complaint, track progress and communicate with our team.</string>
    <string name="create_tickets">CREATE TICKET</string>
    <string name="goto_your_tickets">Goto your ticket(s).</string>
    <string name="phone_number">1800 0156 4237</string>
    <string name="call_details">(Monday - Friday, 09:00am - 06:00pm)</string>
    <string name="my_tickets">MY TICKETS</string>
    <string name="new_ticket">NEW TICKET</string>
    <string name="open">OPEN</string>
    <string name="closeed">CLOSED</string>
    <string name="draft">DRAFT</string>
    <string name="filer_description">86 articles found in 07 categories.</string>
    <string name="show_categories">Showing all categories.</string>
    <string name="show">Showing 03 of 86</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="elevators">Elevators</string>
    <string name="security">SECURITY</string>
    <string name="house_rules">HOUSE RULES</string>
    <string name="wifi">Wifi</string>
    <string name="plumbing">  PLUMBING</string>
    <string name="filter">FILTER</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="filter_description">You have not applied any filter</string>
    <string name="status">STATUS</string>
    <string name="submitted_date">SUBMITTED DATE</string>
    <string name="today">Today</string>
    <string name="sort">SORT</string>
    <string name="ascending">ASCENDING</string>
    <string name="submitted_date_time">SUBMITTED DATE &amp; TIME</string>
    <string name="subject">Subject</string>
    <string name="timer">0:59</string>
    <string name="subject_hint">Please write your subject here.</string>
    <string name="registered_mobile_number1">REGISTERED MOBILE NUMBER</string>
    <string name="support">Support</string>
    <string name="community">Community</string>
    <string name="accounts">Accounts</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Settings</string>
    <string name="open_description">Tickets that are assigned but not closed.</string>
    <string name="closed_description">Tickets that have been closed.</string>
    <string name="draft_description">Tickets that are saved but not submitted.</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="ticket_author_name">Ticket Author Name</string>
    <string name="ticket_date">Ticket Date</string>
    <string name="ticket_description">Ticket Description</string>
    <string name="complaint">Complaint</string>
    <string name="attachment">Attachments (0)</string>
    <string name="attachment_description">You can attach photos, video, documents or any other files here.</string>
    <string name="save_draft">SAVE AS DRAFT</string>
    <string name="no_result_found">No Results Found</string>
    <string name="no_result_found_description">Sorry, we couldn’t find any content for “search_keyword”</string>
    <string name="attachFiles">ATTACH FILES</string>
    <string name="new_tickets_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</string>
    <string name="done">DONE</string>
    <string name="selected_files">Selected files</string>
    <string name="cameraDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</string>
    <string name="galleryDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</string>
    <string name="attach_files_name">Attach Files Name</string>
    <string name="attach_files_size">Attach Files Size</string>
    <string name="delete">delete</string>
    <string name="ticketsDetailDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam erat sapien, ultricies quis sagittis ut, posuere eu eros. Suspendisse non feugiat neque. Sed ac magna nec turpis tincidunt ullamcorper nec in risus. Ut risus purus, suscipit et accumsan sit amet, ultrices quis leo. In non se mper diam. Cras dignissim porta velit, quis ullamcorper mifaucibus in. Duis rutrum orci sed.</string>
    <string name="ticketDetailsDescription1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam erat sapien, ultricies quis sagittis ut, posuere eu eros. Suspendisse non feugiat neque. Sed ac magna nec turpis tincidunt ullamcorper nec in risus. Ut risus purus,</string>
    <string name="was_this_helpful">Was this helpful?</string>
    <string name="writeReview">Write a review</string>
    <string name="reviewName">Reviewer Name</string>
    <string name="reviewDate">Reviewer Date</string>
    <string name="reviewDescription">Reviewer Description</string>
    <string name="ticketsStatus">Tickets Status</string>
    <string name="tickestsDateAndTime">Tickests Date And Time</string>
    <string name="ticketsName">Tickets Name</string>
    <string name="ticketsNo">Tickets No</string>
    <string name="ticketsValue">Tickets Value</string>
    <string name="clock">Clock</string>
    <string name="clockValue">Clock Value</string>
    <string name="submittedOn">Submitted on</string>
    <string name="ticketNameDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean feugiat felis id sem elemen tum, sit amet sollicitudin leo vestibulum.</string>
    <string name="attachmentFiles">03 Files</string>
    <string name="attachmentTitle">ATTACHMENTS</string>
    <string name="activityTitle">ACTIVITY</string>
    <string name="attachment_file1">C1-1495808082821_74993709_enc.pdf</string>
    <string name="attachment_file1_size">307 KB</string>
    <string name="attachment_file2">report-template-usability-test_0.docx</string>
    <string name="attachment_file2_size">1.8 MB</string>
    <string name="attachment_file3">Screen Shot 2019-05-01 at 2.26.15 PM.png</string>
    <string name="attachment_file3_size">2.3 MB</string>
    <string name="feedback_failed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim felis et magna mattis finibus. Nulla elit ligula, placerat tincidunt ipsum eu, ornare semper felis. Duis arcu massa, venenatis eget ante sodales, posuere volutpat risus.</string>
    <string name="groupCreationDateAndTime">Group Creation Date And Time</string>
    <string name="rent_invoice_date">Rent Invoice Date</string>
    <string name="rent_invoice_no">Rent Invoice No</string>
    <string name="rent_invoice_amount">Rent Invoice Amount</string>
    <string name="amount_value">Amount</string>
    <string name="receipts_no">Receipts No</string>
    <string name="created_on">Created On</string>
    <string name="balance_amount">Balance</string>
    <string name="debit_amount">Debit</string>
    <string name="ledger_date">Ledger Date</string>
    <string name="ledger_type">Ledger Type</string>
    <string name="ledger_name">Ledger Name</string>
    <string name="bills_date">Bills Date</string>
    <string name="bills_no">Bills No</string>
    <string name="product_name">Product Name</string>
    <string name="product_amount">Product Name</string>
</resources>