<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/suppotIcon"
        android:icon="@drawable/support_grey_icon"
        android:title="@string/support" />
    <item
        android:id="@+id/communityIcon"
        android:icon="@drawable/community_grey_icon"
        android:title="@string/community" />
    <item
        android:id="@+id/accountsIcon"
        android:icon="@drawable/accounts_grey_icon"
        android:visible="false"
        android:title="@string/accounts" />
    <item
        android:id="@+id/rewardsIcon"
        android:icon="@drawable/rewards_grey_icon"
        android:title="@string/rewards"
        android:visible="false" />
    <item
        android:id="@+id/settingsIcon"
        android:icon="@drawable/settings_grey_icon"
        android:title="@string/settings" />
</menu>