<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ledgerListLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingTop="22dp"
        android:paddingEnd="32dp"
        android:paddingBottom="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ledgerDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.06"
            android:text="@string/ledger_date"
            android:textColor="@color/colorZambezi1"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ledgerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0.06"
            android:text="@string/ledger_type"
            android:textColor="@color/colorDimGray"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ledgerDate" />

        <TextView
            android:id="@+id/ledgerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0.06"
            android:text="@string/ledger_name"
            android:textColor="@color/colorDimGray"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ledgerType" />

        <TextView
            android:id="@+id/debitAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="150dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.06"
            android:text="@string/debit_amount"
            android:textColor="@color/colorZambezi1"
            android:textSize="11sp"
            app:layout_constraintEnd_toStartOf="@+id/balanceAmount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/balanceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.06"
            android:text="@string/balance_amount"
            android:textColor="@color/colorZambezi1"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>