<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="22dp"
    android:paddingBottom="22dp">


    <TextView
        android:id="@+id/billsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.05"
        android:text="@string/bills_date"
        android:textColor="@color/colorZambezi1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/billsNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.05"
        android:text="@string/bills_no"
        android:textColor="@color/colorDimGray"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billsDate" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.05"
        android:text="@string/product_name"
        android:textColor="@color/colorZambezi1"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billsNo" />

    <TextView
        android:id="@+id/productAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.05"
        android:text="@string/product_amount"
        android:textColor="@color/colorZambezi1"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/billsNavigationIcon"
        app:layout_constraintStart_toEndOf="@+id/billsNo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/billsNavigationIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/navigation_next_xxhdpi" />
</androidx.constraintlayout.widget.ConstraintLayout>