<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtRentInvoiceDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.05"
            android:text="@string/rent_invoice_date"
            android:textColor="@color/colorZambezi1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtRentInvoiceNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRentInvoiceDate"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.05"
            android:text="@string/rent_invoice_no"
            android:textColor="@color/colorDimGray"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txtRentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/rent_invoice_amount"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.05"
            android:textColor="@color/colorZambezi1"
            android:textSize="11sp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btnShowRentInvoiceDetails" />

        <ImageView
            android:id="@+id/btnShowRentInvoiceDetails"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/navigation_icon_xhdpi"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"

            />
    </RelativeLayout>
</FrameLayout>